--- a/nullish.html
+++ b/nullish.html
@@ -22,6 +22,10 @@
             console.log('SOMETHING NOT NULL' ?? null);
             console.log(null ?? 'SOMETHING NOT NULL' ?? 'something');
             console.log('SOMETHING NOT NULL' ?? 'something' ?? null);
+
+            console.log("ternery");
+            consol.log(true ? "A" : "B");
+            consol.log(false ? "A" : "B");
            
         </pre>
     </div>
@@ -34,6 +38,10 @@
             console.log('SOMETHING NOT NULL' ?? null);
             console.log(null ?? 'SOMETHING NOT NULL' ?? 'something');
             console.log('SOMETHING NOT NULL' ?? 'something' ?? null);
+
+            console.log("ternery");
+            consol.log(true ? "A" : "B");
+            consol.log(false ? "A" : "B");
 
         }
 
